# game-of-life

./: CMakeLists.txt  README.md
include/: board.hpp  game.hpp  rule.hpp
src/: board.cpp  game-of-life-main.cpp  game.cpp  neural-network-main.cpp  rule.cpp
